--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <main id="projects">
         <div class="recipe a">
   <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-  <h2>Your blog post title</h2>
+  <h2>Where does your Data Go?</h2>
   <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
   <p class="mins">20 mins</p>
-  <p class="description">An appealing description of <a href="linktoyourpost.com">your post</a>. Create that "itch" to click we talked about!</p>
+  <p class="description">Do you ever Wonder where does your data go? <a href="https://medium.com/@shreyas7/where-does-your-data-go-ec32ee2dd5a6">This</a>. is the place to take a peak and know more about how your data is stored, managed and used!</p>
 </div>
         <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
