--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
       <header>
         <div class="wrapper">
-    <h1>Andy Lautenschlager</h1>
-      <p class="bio"> Here's where you could put a description of yourself and the site. Like, "I'm an English major and Pizza Ambassador. This site collects some of my digital media-related coursework."
+    <h1>Shreyas Sakhalkar</h1>
+      <p class="bio">I am a Computer Science major at Virginia Tech. This site collects some of my digital media-related coursework."
       </p>
     <div class="buttonBox">
       <a class="myButton" href="#projects">Go</a>
