--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
       </main>
 
       <footer>
-        <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo">
+        <div>
+      <p class="copyright">© SHREYAS SAKHALKAR 2021</p>
+      </div>
       </footer>
 
     </div>
