--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <div class="wrapper">
     <h1>Shreyas Sakhalkar</h1>
-      <p class="bio">I am a Computer Science major at Virginia Tech. This site collects some of my digital media-related coursework."
+      <p class="bio">I am a Computer Science major at Virginia Tech. This site collects some of my digital media-related coursework.
       </p>
     <div class="buttonBox">
       <a class="myButton" href="#projects">Go</a>
@@ -63,7 +63,7 @@
 
       <footer>
         <div>
-      <p class="copyright">© SHREYAS SAKHALKAR 2021</p>
+      <p class="copyright">SHREYAS SAKHALKAR</p>
       </div>
       </footer>
 
